fixed overflowing video

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ body {
     background-position: 50% 50%;
     background-attachment: fixed;
     overflow-y: scroll;
+    overflow-x: hidden;
     height: 100% !important;
 }
 
